--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gatsby-plugin-react-helmet": "^3.0.12",
     "gatsby-plugin-sharp": "^2.0.37",
     "gatsby-plugin-styled-components": "^3.0.7",
+    "gatsby-plugin-typography": "^2.2.13",
     "gatsby-source-filesystem": "^2.0.36",
     "gatsby-transformer-json": "^2.1.11",
     "gatsby-transformer-sharp": "^2.1.19",
@@ -25,7 +26,9 @@
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-helmet": "^5.2.1",
-    "styled-components": "^4.2.0"
+    "react-typography": "^0.16.19",
+    "styled-components": "^4.2.0",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.17.1"
