--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-brands-svg-icons": "^5.8.2",
     "@fortawesome/free-solid-svg-icons": "^5.8.2",
     "@fortawesome/react-fontawesome": "^0.1.4",
+    "@rebass/grid": "^6.0.0",
     "babel-plugin-styled-components": "^1.10.0",
     "gatsby": "^2.5.5",
     "gatsby-background-image": "^0.6.1",
